<resources>
    <string name="app_name">TaskManager</string>
    <string name="title_activity_show_calendar">ShowCalendarActivity</string>
    <string name="title_activity_listing_fragment">ListingFragment</string>
    <string name="list_title">%s</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="duration_in_hours">Duration in hours</string>
    <string name="task_duration">Task duration in hours:</string>
    <string name="minimal_value">Minimal task duration</string>
    <string name="maximum_value">Maximum task duration</string>
    <string name="minimum_hours_beteen_tasts">Minimum hours beteen tasts</string>
    <string name="notification">Notification in minutes</string>
    <string name="title_activity_tabbed_task_manager">TabbedTaskManager</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="apply">Apply</string>
    <string name="text">%s</string>
    <string name="time_spent">Time spent</string>
    <string name="time_in_hours">Time in hours</string>
    <string name="remaining_time">Remaining time</string>
    <string name="hours">hours</string>
    <string name="when_do_you_want_to_start_your_task">When do you want to start your task?</string>
</resources>
